; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/hash/extr_rhash.c_sha256_hash.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/hash/extr_rhash.c_sha256_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sha256_ctx = type { i32 }
%union.anon = type { [32 x i64] }

@.str = private unnamed_addr constant [5 x i8] c"%02x\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sha256_hash(i8* %0, i64* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.sha256_ctx, align 4
  %9 = alloca %union.anon, align 8
  store i8* %0, i8** %4, align 8
  store i64* %1, i64** %5, align 8
  store i64 %2, i64* %6, align 8
  %10 = call i32 @sha256_init(%struct.sha256_ctx* %8)
  %11 = load i64*, i64** %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = trunc i64 %12 to i32
  %14 = call i32 @sha256_chunk(%struct.sha256_ctx* %8, i64* %11, i32 %13)
  %15 = call i32 @sha256_final(%struct.sha256_ctx* %8)
  %16 = bitcast %union.anon* %9 to [8 x i32]*
  %17 = getelementptr inbounds [8 x i32], [8 x i32]* %16, i64 0, i64 0
  %18 = call i32 @sha256_subhash(%struct.sha256_ctx* %8, i32* %17)
  store i32 0, i32* %7, align 4
  br label %19

19:                                               ; preds = %35, %3
  %20 = load i32, i32* %7, align 4
  %21 = icmp ult i32 %20, 32
  br i1 %21, label %22, label %38

22:                                               ; preds = %19
  %23 = load i8*, i8** %4, align 8
  %24 = load i32, i32* %7, align 4
  %25 = mul i32 2, %24
  %26 = zext i32 %25 to i64
  %27 = getelementptr inbounds i8, i8* %23, i64 %26
  %28 = bitcast %union.anon* %9 to [32 x i64]*
  %29 = load i32, i32* %7, align 4
  %30 = zext i32 %29 to i64
  %31 = getelementptr inbounds [32 x i64], [32 x i64]* %28, i64 0, i64 %30
  %32 = load i64, i64* %31, align 8
  %33 = trunc i64 %32 to i32
  %34 = call i32 @snprintf(i8* %27, i32 3, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %33)
  br label %35

35:                                               ; preds = %22
  %36 = load i32, i32* %7, align 4
  %37 = add i32 %36, 1
  store i32 %37, i32* %7, align 4
  br label %19

38:                                               ; preds = %19
  ret void
}

declare dso_local i32 @sha256_init(%struct.sha256_ctx*) #1

declare dso_local i32 @sha256_chunk(%struct.sha256_ctx*, i64*, i32) #1

declare dso_local i32 @sha256_final(%struct.sha256_ctx*) #1

declare dso_local i32 @sha256_subhash(%struct.sha256_ctx*, i32*) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
